docs/getting-started/running-nexus/minikube/cassandra.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: cassandra
    namespace: nexus
    labels:
      app: cassandra
      group: infra
  spec:
    ports:
    - port: 7000
      name: internode
    - port: 7001
      name: internode-tls
    - port: 7199
      name: jmx
    - port: 9042
      name: cql
    - port: 9160
      name: thrift
    clusterIP: None
    selector:
      app: cassandra
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: cassandra
    namespace: nexus
    labels:
      app: cassandra
      group: infra
  spec:
    serviceName: cassandra
    selector:
      matchLabels:
        app: cassandra
    replicas: 1
    template:
      metadata:
        namespace: nexus
        labels:
          app: cassandra
          group: infra
      spec:
        terminationGracePeriodSeconds: 180
        containers:
        - name: cassandra
          image: cassandra:3.11.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: storage
            mountPath: /var/lib/cassandra
          ports:
          - containerPort: 7000
            name: internode
          - containerPort: 7001
            name: internode-tls
          - containerPort: 7199
            name: jmx
          - containerPort: 9042
            name: cql
          - containerPort: 9160
            name: thrift
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          securityContext:
            capabilities:
              add:
              - IPC_LOCK
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - nodetool drain
          livenessProbe:
            tcpSocket:
              port: cql
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
    volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        storageClassName: standard
        accessModes: [ ReadWriteOnce ]
        resources:
          requests:
            storage: 1Gi
