docs/getting-started/running-nexus/minikube/iam.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: iam
    namespace: nexus
    labels:
      app: iam
      role: iam
      group: service
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: iam
      role: iam
      group: service
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: iam-hd
    namespace: nexus
    labels:
      app: iam
      role: iam
      group: service
  spec:
    ports:
    - name: remoting
      port: 2552
      protocol: TCP
      targetPort: 2552
    selector:
      app: iam
      role: iam
      group: service
    clusterIP: None
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: iam
    namespace: nexus
    labels:
      app: iam
      role: iam
      group: service
  spec:
    replicas: 1
    serviceName: iam-hd
    selector:
      matchLabels:
        app: iam
    template:
      metadata:
        namespace: nexus
        labels:
          app: iam
          role: iam
          group: service
      spec:
        containers:
        - name: iam
          image: bluebrain/nexus-iam:latest
          command:
          - '/bin/bash'
          - '-c'
          - '/bin/bash /opt/docker/bin/iam-service -Doverride.remoting.interface=$REMOTING_INTERFACE.iam-hd.nexus.svc.cluster.local'
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 2552
            name: remoting
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: remoting
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1Gi
        dnsPolicy: ClusterFirst
        terminationGracePeriodSeconds: 30
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: iam
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: iam
            servicePort: 8080
          path: /v1/acls
        - backend:
            serviceName: iam
            servicePort: 8080
          path: /v1/oauth2
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: iam-direct
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: iam
            servicePort: 8080
          path: /iam
