docs/getting-started/running-nexus/minikube/kg.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: kg
    namespace: nexus
    labels:
      app: kg
      group: service
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: kg
      group: service
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: kg-hd
    namespace: nexus
    labels:
      app: kg
      group: service
  spec:
    ports:
    - name: remoting
      port: 2552
      protocol: TCP
      targetPort: 2552
    - name: prometheus
      port: 9095
      protocol: TCP
      targetPort: 9095
    selector:
      app: kg
      group: service
    clusterIP: None
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: storage-kg
    namespace: nexus
    labels:
      app: kg
      group: service
  spec:
    accessModes: [ ReadWriteOnce ]
    storageClassName: standard
    resources:
      requests:
        storage: 1Gi
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: kg
    namespace: nexus
    labels:
      app: kg
      group: service
  spec:
    replicas: 1
    serviceName: kg-hd
    selector:
      matchLabels:
        app: kg
    template:
      metadata:
        namespace: nexus
        labels:
          app: kg
          group: service
      spec:
        containers:
        - name: kg
          image: bluebrain/nexus-kg:1.1
          imagePullPolicy: Always
          volumeMounts:
          - name: storage
            mountPath: /opt/binaries
          command:
          - '/bin/bash'
          - '-c'
          - '/opt/docker/bin/kg -Doverride.remoting.interface=$REMOTING_INTERFACE.kg-hd.nexus.svc.cluster.local'
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 2552
            name: remoting
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: remoting
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1Gi
        dnsPolicy: ClusterFirst
        terminationGracePeriodSeconds: 30
        volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage-kg
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: kg
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: kg
            servicePort: 8080
          path: /v1/resources
        - backend:
            serviceName: kg
            servicePort: 8080
          path: /v1/schemas
        - backend:
            serviceName: kg
            servicePort: 8080
          path: /v1/views
        - backend:
            serviceName: kg
            servicePort: 8080
          path: /v1/resolvers
        - backend:
            serviceName: kg
            servicePort: 8080
          path: /v1/files
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: kg-direct
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: kg
            servicePort: 8080
          path: /kg
