docs/getting-started/running-nexus/minikube/web.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: nexus-web
    namespace: nexus
    labels:
      app: nexus-web
      group: service
  spec:
    ports:
      - name: http
        port: 8000
        protocol: TCP
        targetPort: 8000
    selector:
      app: nexus-web
      group: service
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: nexus-web
    namespace: nexus
    labels:
      app: nexus-web
      group: service
  spec:
    replicas: 1
    serviceName: nexus-web
    selector:
      matchLabels:
        app: nexus-web
    template:
      metadata:
        labels:
          app: nexus-web
          group: service
      spec:
        containers:
          - name: nexus-web
            image: 'bluebrain/nexus-web:1.1.1'
            ports:
              - containerPort: 8000
                protocol: TCP
            resources:
              limits:
                cpu: 200m
                memory: 200Mi
              requests:
                cpu: 100m
                memory: 100Mi
            imagePullPolicy: Always
            livenessProbe:
              failureThreshold: 3
              initialDelaySeconds: 5
              periodSeconds: 5
              successThreshold: 1
              tcpSocket:
                port: 8000
              timeoutSeconds: 5
            readinessProbe:
              failureThreshold: 3
              httpGet:
                path: /
                port: 8000
                scheme: HTTP
              initialDelaySeconds: 5
              periodSeconds: 5
              successThreshold: 1
              timeoutSeconds: 5
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: nexus-web
    namespace: nexus
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: nexus-web
            servicePort: 8000
          path: /
